--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include discord_prova/schema.sql
-graft discord_prova/static
-graft discord_prova/templates
+include discord/schema.sql
+graft discord/static
+graft discord/templates
 global-exclude *.pyc
